--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
