--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "tutorial",
   "main": "src/app.js",
   "scripts": {
-    "start": "npx nodemon"
+    "start": "npx nodemon",
+    "watch": "tsc -p tsconfig.json --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
